tests/paczka1/small_fuzzy/81563382.err
Error in line 11: A401 A401 12,9
Error in line 1: qjjWO7eFuz A401 98,1
Error in line 9: QWN2 A279 3,5
